test/ConditionalHooks.expected
File "ConditionalHooks.ml", line 3, characters 32-47:
3 |   if randomProp == "state" then useMouseHook ();
                                    ^^^^^^^^^^^^^^^
Error: Hooks can't be inside conditionals, neither loops.
